addition of buttons

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>rock paper scissors game</title>
-  <script src="file.js"></script>
-  
 </head>
 <body>
-  
+  <p>ROCK PAPER SCISSORS</p>
+    
+  <div class="first" >
+    <button id="rock">rock</button>
+    <button id="paper">paper</button>
+    <button id="scissors">scissors</button>
+  </div>
+  <script defer src="file.js"></script>
 </body>
 </html>
